--- a/app/src/main/res/layout/addlist.xml
+++ b/app/src/main/res/layout/addlist.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="16dp">
 
 
@@ -184,6 +184,7 @@
         android:textSize="20sp"/>
 
 </RelativeLayout>
+
 
 
 
