--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,15 @@
 
 
 
-  <ListView
-      android:id="@+id/listview"
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/recycler"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+      android:orientation="vertical"
+android:padding="16dp"
       >
-
-  </ListView>
+  </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
