--- a/app/src/main/res/layout/addlist.xml
+++ b/app/src/main/res/layout/addlist.xml
@@ -17,7 +17,7 @@
     String audiCnt;//
     String audiAcc;//-->
 
- <android.support.v7.widget.CardView
+ <android.support.design.card.MaterialCardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
 
@@ -39,11 +39,11 @@
        android:id="@+id/add_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_marginStart="0dp"
-       android:layout_marginLeft="0dp"
+
        android:layout_toEndOf="@+id/add_rankOldAndNew"
        android:layout_toRightOf="@+id/add_rankOldAndNew"
-       android:paddingLeft="8dp"
+       android:layout_alignBaseline="@id/add_name"
+       android:paddingLeft="12dp"
        android:text="1"
        android:textSize="25sp" />
 
@@ -52,9 +52,8 @@
        android:id="@+id/rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_alignBottom="@id/add_rank"
-       android:layout_marginLeft="0dp"
-       android:layout_marginBottom="4dp"
+      android:layout_alignBaseline="@id/add_name"
+
        android:layout_toRightOf="@id/add_rank"
        android:text=" 등"
        android:textStyle="bold"
@@ -192,7 +191,7 @@
 
   </RelativeLayout>
 
- </android.support.v7.widget.CardView>
+ </android.support.design.card.MaterialCardView>
 
 
 
